# uru-compiler-design

./: .gitignore
dfa-regex-validator/: CMakeLists.txt
dfa-regex-validator/src/: main.cpp
dfa-regex-validator/src/lib/validators/: CMakeLists.txt  validators.cpp  validators.hpp
dfa-regex-validator/src/lib/validators/digits/: CMakeLists.txt  digits.cpp  digits.hpp
dfa-regex-validator/src/lib/validators/floats/: CMakeLists.txt  floats.cpp  floats.hpp
dfa-regex-validator/src/lib/validators/identifiers/: CMakeLists.txt  identifiers.cpp  identifiers.hpp
dfa-regex-validator/src/lib/validators/integers/: CMakeLists.txt  integers.cpp  integers.hpp
dfa-regex-validator/src/lib/validators/letters/: CMakeLists.txt  letters.cpp  letters.hpp
dfa-regex-validator/src/lib/validators/operators/: CMakeLists.txt  operators.cpp  operators.hpp
dfa-regex-validator/src/lib/validators/reserved_words/: CMakeLists.txt  reserved_words.cpp  reserved_words.hpp
dfa-regex-validator/src/lib/validators/words/: CMakeLists.txt  words.cpp  words.hpp
exceptions/: CMakeLists.txt  expressionException.cpp  expressionException.hpp  expression_exception.cpp  expression_exception.hpp
general-regex-validator/: CMakeLists.txt
general-regex-validator/src/: main.cpp
general-regex-validator/src/lib/validators/: CMakeLists.txt  expressions.cpp  expressions.hpp
interpreter/: CMakeLists.txt
interpreter/src/: main.cpp
interpreter/src/data/: supercode.ralvarezdev
interpreter/src/lib/interpreter/: CMakeLists.txt  syntax_tree_interpreter.cpp  syntax_tree_interpreter.hpp
interpreter/src/lib/lexical-analyzer/: CMakeLists.txt  lexical_analyzer.cpp  lexical_analyzer.hpp
interpreter/src/lib/syntax-analyzer/: CMakeLists.txt  syntax_analyzer.cpp  syntax_analyzer.hpp
interpreter/src/lib/tokens/: CMakeLists.txt  tokens.cpp  tokens.hpp
interpreter/src/lib/tree/: CMakeLists.txt  nodes.cpp  nodes.hpp  parse_tree_node.cpp  parse_tree_node.hpp  syntax_tree_node.cpp  syntax_tree_node.hpp
regex-validator/: CMakeLists.txt
regex-validator/src/: main.cpp
regex-validator/src/lib/exceptions/: CMakeLists.txt  expressionsException.h
regex-validator/src/lib/validators/: CMakeLists.txt  expressions.cpp  expressions.h
